--- a/traefik/config.yaml
+++ b/traefik/config.yaml
@@ -14,7 +14,7 @@ startup: system
 init: false
 stage: stable
 boot: auto
-url: https://alxx.nl/home-assistant-addons/tree/master/traefik
+url: https://github.com/TheNicholi/home-assistant-addons/tree/master/traefik
 ports:
   80/tcp: 80
   443/tcp: 443
